# terminal-in-colors

./: .gitignore  README.md  mkdocs.yml  notas.md  pyproject.toml  requirements.txt
docs/: how-to-guides.md  index.md
site/: 404.html  index.html  objects.inv
site/how-to-guides/: index.html
terminal_in_color/: ColorTerminal.py  __init__.py  info_colors.py
terminal_in_colors/: ColorTerminal.py  __init__.py  colors_ansi.csv  info_colors.py
tests/: test.py
