[tool.poetry]
name = "terminal-in-color"
version = "0.1.0"
description = "Your terminal in colors :D"
authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "terminal_in_color"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocstrings-python = "^1.1.2"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
